src/objects/SFDC_Employee__c.object
<CustomObject>
    <fields>
        <fullName>A_Total_Units_Cumulative_Current_Year__c</fullName>
        <label>A Total Units Cumulative</label>
        <summarizedField>CMMetric__c.Total_Hours_A__c</summarizedField>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Metric</value>
        </summaryFilterItems>
        <summaryForeignKey>CMMetric__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Total_Units_Rolling_12_Months__c</fullName>
        <label>A Total Units (Rolling 12 Months)</label>
        <summarizedField>CMMetric__c.Total_Hours_A__c</summarizedField>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/30/2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Metric</value>
        </summaryFilterItems>
        <summaryForeignKey>CMMetric__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Education__c</fullName>
        <label>Additional Education</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Late_Rating__c</fullName>
        <formula>Sum_Late_Rating__c / Late_Report_Rating_Count__c</formula>
        <label>Avg Late Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Description__c</fullName>
        <label>BU Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Total_Units_Cumulative__c</fullName>
        <label>B Total Units Cumulative</label>
        <summarizedField>CMMetric__c.B_Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>CMMetric__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Metric</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </summaryFilterItems>
        <summaryForeignKey>CMMetric__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B_Total_Units_Rolling_12_Months__c</fullName>
        <label>B Total Units (Rolling 12 Months)</label>
        <summarizedField>CMMetric__c.B_Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>CMMetric__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Metric</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>lessOrEqual</operation>
            <value>5/30/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/30/2017</value>
        </summaryFilterItems>
        <summaryForeignKey>CMMetric__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bonus_Potential__c</fullName>
        <formula>Salary__c  *  0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus (Potential)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CellNumber__c</fullName>
        <label>Cell Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corp_Photo__c</fullName>
        <formula>IMAGE(&quot;http://www.salesforceius.com/appx/staffpix/&quot;&amp;  JPG__c , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Total_Cases__c</fullName>
        <label>Total Cases Cumulative</label>
        <summarizedField>CMMetric__c.TotalCases__c</summarizedField>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Metric</value>
        </summaryFilterItems>
        <summaryForeignKey>CMMetric__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Employed__c</fullName>
        <formula>TODAY () - Hire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_Terminal__c</fullName>
        <label>Desk Terminal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomainPassword__c</fullName>
        <label>Domain Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EMERGENCY_CONTACT__c</fullName>
        <label>EMERGENCY CONTACT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMP_ID__c</fullName>
        <label>EMP ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Degrees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HS</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significant Other</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Fax__c</fullName>
        <label>Employee Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>Emp ID for charting</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>LOA</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caucasion</fullName>
                </value>
                <value>
                    <fullName>Afican-American</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Location__c</fullName>
        <label>Field Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Former_Employer_1__c</fullName>
        <label>Former Employer 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer_3__c</fullName>
        <label>Former Employer 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer__c</fullName>
        <label>Former Employer 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gym_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>IF( SF_User__r.IsActive , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAssistant__c</fullName>
        <label>IsAssistant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JPG__c</fullName>
        <label>JPG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Function</label>
        <referenceTo>SFDC_Job_Function__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>R00N30000001eUPQEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Report_Rating_Count__c</fullName>
        <label>Late Report Rating Count</label>
        <summaryForeignKey>Late_Report_Rating__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Drop__c</fullName>
        <label>Mail Drop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Med_Type__c</fullName>
        <label>Med Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Unit__c</fullName>
        <label>Org Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_Date__c</fullName>
        <label>Position Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_ID__c</fullName>
        <label>Position ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_B_Cumulative__c</fullName>
        <formula>B_Total_Units_Cumulative__c / 866.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity B Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Productivity_B_Rolling_12_Months__c</fullName>
        <formula>B_Total_Units_Rolling_12_Months__c /2080</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity B (Rolling 12 Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Productivity_Cumulative__c</fullName>
        <formula>(A_Total_Units_Cumulative_Current_Year__c /866.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity A Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Productivity_Rolling_12_Months__c</fullName>
        <formula>A_Total_Units_Rolling_12_Months__c / 2080</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity A (Rolling 12 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Queue_Comment_s__c</fullName>
        <label>Queue Comment(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue_In_training__c</fullName>
        <inlineHelpText>select queue that QRS is currently training in</inlineHelpText>
        <label>Queue - In training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>New Nurse Review</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_s_Tested_Successfully__c</fullName>
        <inlineHelpText>select queue(s) the QRS has trained and tested successfully (mastered)</inlineHelpText>
        <label>Queue(s) Tested Successfully</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>New Nurse Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_Username__c</fullName>
        <externalId>true</externalId>
        <label>SF Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Section_Sup__c</fullName>
        <label>Section Sup</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_ID__c</fullName>
        <label>Security ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Skills__c</fullName>
        <label>Special Skills</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Options__c</fullName>
        <label>Stock Options</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Value_Day_1__c</fullName>
        <label>Stock Value (Day 1)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_Late_Rating__c</fullName>
        <label>Sum Late Rating</label>
        <summarizedField>Late_Report_Rating__c.Rating__c</summarizedField>
        <summaryForeignKey>Late_Report_Rating__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supervisor_Emp_ID__c</fullName>
        <label>Supervisor Emp ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name_Full__c</fullName>
        <label>Supervisor Name (Full)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cases_Rolling_12_Months__c</fullName>
        <label>Total Cases (Rolling 12 Months)</label>
        <summarizedField>CMMetric__c.TotalCases__c</summarizedField>
        <summaryFilterItems>
            <field>CMMetric__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Metric</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>lessOrEqual</operation>
            <value>5/30/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMMetric__c.MetricDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/30/2017</value>
        </summaryFilterItems>
        <summaryForeignKey>CMMetric__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Stock_Value__c</fullName>
        <formula>Stock_Value_Day_1__c   *   Stock_Options__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilization_Rate_A_Cumulative__c</fullName>
        <formula>A_Total_Units_Cumulative_Current_Year__c /  Cumulative_Total_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Rate A Cumulative</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization_Rate_A_Rolling_12_Months__c</fullName>
        <formula>A_Total_Units_Rolling_12_Months__c / Total_Cases_Rolling_12_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Rate A (Rolling 12 Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization_Rate_B_Cumulative__c</fullName>
        <formula>B_Total_Units_Cumulative__c /  Cumulative_Total_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Rate B Cumulative</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization_Rate_B_Rolling_12_Months__c</fullName>
        <formula>B_Total_Units_Rolling_12_Months__c /  Total_Cases_Rolling_12_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Rate B (Rolling 12 Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Days__c</fullName>
        <label>Vacation Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkstationIDNumber__c</fullName>
        <label>Workstation ID Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X401K__c</fullName>
        <defaultValue>false</defaultValue>
        <label>401K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yahoo_IM__c</fullName>
        <label>Yahoo IM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Comp__c</fullName>
        <formula>Salary__c  +  Bonus_Potential__c  +  Total_Stock_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>AllEmployees</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>SF_User__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Employee_Type__c</columns>
        <columns>SF_Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews>
    <listViews>
        <fullName>Contractors</fullName>
        <columns>NAME</columns>
        <columns>Employee_Status__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contractors</label>
    </listViews>
    <listViews>
        <fullName>FullTimeEmployees</fullName>
        <columns>NAME</columns>
        <columns>Employee_Type__c</columns>
        <columns>Title__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Type__c</field>
            <operation>equals</operation>
            <value>Full Time</value>
        </filters>
        <label>Full Time Employees</label>
    </listViews>
    <listViews>
        <fullName>qc</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>SF_User__c</columns>
        <columns>Employee_Status__c</columns>
        <columns>Employee_Type__c</columns>
        <columns>SF_Username__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Status__c</field>
            <operation>notEqual</operation>
            <value>LOA,Terminated</value>
        </filters>
        <label>All Active Employees</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>